--- a/m4/ltversion.in
+++ b/m4/ltversion.in
@@ -1,7 +1,7 @@
 # ltversion.m4 -- version numbers			-*- Autoconf -*-
 # @configure_input@
 
-# serial @MACRO_REVISION@
+# serial @MACRO_SERIAL@
 # This file is part of GNU Libtool
 
 m4_define([LT_PACKAGE_VERSION], [@MACRO_VERSION@])
