--- a/tests/depdemo/configure.ac
+++ b/tests/depdemo/configure.ac
@@ -42,9 +42,8 @@ AC_EXEEXT
 ## ----------------------- ##
 ## Libtool initialisation. ##
 ## ----------------------- ##
-AC_LIBTOOL_WIN32_DLL
 AC_LIBTOOL_TAGS([])
-AC_PROG_LIBTOOL
+LT_INIT([win32-dll])
 AC_SUBST([LIBTOOL_DEPS])
 
 ## ------------------------------- ##
