--- a/ltmain.in
+++ b/ltmain.in
@@ -6549,6 +6549,10 @@ Install executables or libraries.
 INSTALL-COMMAND is the installation command.  The first component should be
 either the \`install' or \`cp' program.
 
+The following components of INSTALL-COMMAND are treated specially:
+
+  -inst-prefix PREFIX-DIR  Use PREFIX-DIR as a staging area for installation
+
 The rest of the components are interpreted as arguments to that command (only
 BSD-compatible install options are recognized)."
   ;;
