--- a/ltmain.in
+++ b/ltmain.in
@@ -2672,7 +2672,7 @@ EOF
 	      esac
 	      case " $deplibs " in
 	      *" $depdepl "*) ;;
-	      *) deplibs="$deplibs $depdepl" ;;
+	      *) deplibs="$depdepl $deplibs" ;;
 	      esac
 	      case " $deplibs " in
 	      *" $path "*) ;;
