* ltmain.in (link_all_deplibs,darwin): Link libraries in the correct order. Bug from Zachary Pincus <zpincus@stanford.edu>.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2775,7 +2775,7 @@ EOF
 	      esac
 	      case " $deplibs " in
 	      *" $depdepl "*) ;;
-	      *) deplibs="$deplibs $depdepl" ;;
+	      *) deplibs="$depdepl $deplibs" ;;
 	      esac
 	      case " $deplibs " in
 	      *" $path "*) ;;
