--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -19,7 +19,7 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 ACLOCAL_AMFLAGS  = -I ../m4
-AM_CPPFLAGS = -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir)
 DEFS = -DHAVE_CONFIG_H="<$(CONFIG_H)>"
 
 if INSTALL_LTDL
@@ -45,7 +45,7 @@ libltdlc_la_SOURCES = ltdl.c ltdl.h
 libltdlc_la_LIBADD = $(LIBADD_DL)
 
 ## Because we do not have automatic dependency tracking:
-ltdl.lo: ltdl.h $(top_srcdir)/$(CONFIG_H)
+ltdl.lo: ltdl.h $(top_builddir)/$(CONFIG_H)
 
 
 ## These are installed as a subdirectory of pkgdatadir so that
