* Makefile.am (pkgmacro_DATA): Install ltoptions.m4.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,8 @@ dist_pkgdata_DATA = config/config.guess config/config.sub config/ltmain.sh
 # Everything that gets picked up by aclocal is automatically distributed,
 # this is the list of macro files we install on the user's system.
 pkgmacrodir = $(pkgdatadir)/m4
-pkgmacro_DATA = m4/libtool.m4 m4/ltdl.m4 m4/ltsugar.m4 m4/ltversion.m4
+pkgmacro_DATA = m4/libtool.m4 m4/ltdl.m4 m4/ltoptions.m4 m4/ltsugar.m4 \
+	m4/ltversion.m4
 
 # We build ltversion.m4 here, instead of from config.status,
 # because config.status is rerun each time one og configure's
