According to Howard Chu <hyc@highlandsun.com>: Applications should assume that the native dlopen is NOT thread-safe, and take care of locking themselves. All application calls into libltdl should thus be protected by the caller.
* libltdl/lt_mutex.c, libltdl/lt_mutex.h: Removed.
* libltdl/Makefile.am (pkginclude_HEADERS): Removed lt_mutex.h.
(libltdl_la_SOURCES): Removed lt_mutex.c and lt_mutex.h.
* libltdl/ltdl.h: Don't include lt_mutex.h.
* libltdl/lt__private.h (LT__MUTEX_GETERROR, LT__MUTEX_SETERROR)
(LT__MUTEX_SETERRORSTR): Renamed to...
(LT__GETERROR, LT__SETERROR, LT__SETERRORSTR): ...this.  Changed
all callers.
(LT__MUTEX_LOCK, LT__MUTEX_UNLOCK, lt_dlmutex_lock)
(lt_dlmutex_unlock, lt_dlmutex_seterror, lt_dlmutex_geterror):
Removed.  Changed all callers.
* doc/libtool.texi (Thread Saftey in libltdl):
* NEWS: Updated.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -26,7 +26,7 @@ pkgincludedir = $(includedir)/libltdl
 
 if INSTALL_LTDL
 include_HEADERS = ltdl.h
-pkginclude_HEADERS = lt_system.h lt_error.h lt_mutex.h
+pkginclude_HEADERS = lt_system.h lt_error.h
 lib_LTLIBRARIES = libltdl.la
 endif
 
@@ -40,7 +40,7 @@ CLEANFILES	    = libltdl.la libltdlc.la
 
 libltdl_la_SOURCES  = ltdl.h ltdl.c \
 		      loader-preopen.c \
-		      lt_error.h lt_error.c lt_mutex.h lt_mutex.c \
+		      lt_error.h lt_error.c \
 		      lt__private.h lt__alloc.h lt__alloc.c \
 		      lt__glibc.h argz.h lt__dirent.h \
 		      lt_system.h
