* ltmain.in: Add new qnx version type support. * m4/libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER): Use it.  Set ldqnx.so linker type. (AC_DEPLIBS_CHECK_METHOD): QNX6 uses GNU C++, with deplib checking, so use pass_all. (AC_LIBTOOL_PROG_COMPILER_PIC): Use -shared for QNX. (_LT_LANG_CXX_CONFIG): QNX can make shared libraries. * m4/ltdl.m4 (AC_LTDL_SYS_DLOPEN_DEPLIBS): QNX opens deplibs on dlopen. * NEWS: Updated.

--- a/ltmain.in
+++ b/ltmain.in
@@ -3100,7 +3100,7 @@ EOF
 
 	freebsd-elf)
 	  major=".$current"
-	  versuffix=".$current";
+	  versuffix=".$current"
 	  ;;
 
 	irix | nonstopux)
@@ -3145,6 +3145,11 @@ EOF
 
 	  # Make executables depend on our current version.
 	  verstring="$verstring:${current}.0"
+	  ;;
+
+	qnx)
+	  major=".$current"
+	  versuffix=".$current"
 	  ;;
 
 	sunos)
@@ -4033,7 +4038,7 @@ EOF
 	    fi
 	  fi
 
-	  exit $EXIT_SUCCESS 
+	  exit $EXIT_SUCCESS
 	fi
 
 	# Create links to the real library.
